blog/istio-advanced-routing/06-route-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recursed
spec:
  hosts:
  - "*"
  gateways:
  - recursed
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: recursed
        subset: v2
        port:
          number: 8000
