blog/istio-advanced-routing/07-route-v1-v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recursed
spec:
  hosts:
  - "*"
  gateways:
  - recursed
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: recursed
        subset: v1
        port:
          number: 8000
      weight: 90
    - destination:
        host: recursed
        subset: v3
        port:
          number: 8000
      weight: 10
