blog/istio-advanced-routing/08-route-v1-mirror-v3.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recursed
spec:
  hosts:
  - "*"
  gateways:
  - recursed
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: recursed
        subset: v1
        port:
          number: 8000
    mirror:
      host: recursed
      subset: v3
      port:
        number: 8000
