blog/istio-advanced-routing/09-route-v1-fault.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recursed
spec:
  hosts:
  - "*"
  gateways:
  - recursed
  http:
  - fault:
      delay:
        fixedDelay: 1s
        percent: 100
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: recursed
        subset: v1
        port:
          number: 8000
