blog/istio-advanced-routing/10-route-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recursed
spec:
  hosts:
  - "*"
  gateways:
  - recursed
  http:
  - match:
     - uri:
         prefix: /
    route:
    - destination:
        host: recursed
        port:
          number: 8000
    timeout: 1s
    retries:
      attempts: 3
      perTryTimeout: 0.5s
