blog/istio-advanced-routing/10-route-v1-v2-timeout.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recursed
spec:
  hosts:
  - "*"
  gateways:
  - recursed
  http:
  - route:
    - destination:
        host: recursed
        port:
          number: 8000
        subset: v1
      weight: 50
    - destination:
         host: recursed
         port:
           number: 8000
         subset: v2
      weight: 50
    timeout: 3s
    retries:
      attempts: 3
      perTryTimeout: 0.5s
    match:
    - uri:
        prefix: /
