blog/istio-advanced-routing/11-dr-circuitbreaker.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recursed
spec:
  host: recursed
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  - name: v3
    labels:
      version: v3
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    outlierDetection:
      baseEjectionTime: 180s
      consecutiveErrors: 1
      interval: 5s
      maxEjectionPercent: 100
